# harmonia-lumia

./: .gitignore  README.md  docker-compose-harmonia.yaml  harmonia  pyproject.toml
app-agente/: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test_uuid7.py
app-agente/src/: main.py
app-agente/src/agente_chat/: Dockerfile  __init__.py
app-agente/src/agente_chat/application/: __init__.py  prompt_builder.py  use_cases.py
app-agente/src/agente_chat/config/: settings.py
app-agente/src/agente_chat/domain/: __init__.py  entities.py  interfaces.py  value_objects.py
app-agente/src/agente_chat/domain/history_chat/: __init__.py  entity.py  repositories.py  value_objects.py
app-agente/src/agente_chat/infrastructure/: __init__.py  embedding_service.py  history_chat_repository.py  llm_manager.py  llm_service.py  weaviate_retriever.py
app-agente/src/agente_chat/interface/: __init__.py  api.py  schemas.py
app-agente/tests/: test_api.py
app-harmonia/: Dockerfile  README.md  docker-compose-app.yaml  package-lock.json
app-harmonia/backend/: .gitignore  Dockerfile  pyproject.toml  tmp_test.py
app-harmonia/backend/app/: main.py
app-harmonia/backend/app/adapters/http/: auth_router.py  dependencies.py  tool_router.py  user_router.py
app-harmonia/backend/app/application/tool/: dto.py  service.py
app-harmonia/backend/app/application/user/: dto.py  service.py
app-harmonia/backend/app/core/: security.py  settings.py  settings_backup.py
app-harmonia/backend/app/domain/tool/: entity.py  exceptions.py  repository.py
app-harmonia/backend/app/domain/user/: __init__.py  entity.py  exceptions.py  repository.py
app-harmonia/backend/app/infrastructure/database/: session.py
app-harmonia/backend/app/infrastructure/database/models/: __init__.py  base.py  tool_model.py  user_model.py
app-harmonia/backend/app/infrastructure/repositories/: tool_repository_impl.py  user_repository_impl.py
app-harmonia/backend/tests/: conftest.py  test_auth.py  test_tool.py  test_user.py
app-harmonia/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  proxy.conf.json
app-harmonia/frontend/src/: index.html  styles.css
app-harmonia/frontend/src/app/: app.config.ts  app.routes.ts
app-harmonia/frontend/src/app/application/auth/: auth.service.spec.ts  auth.service.ts
app-harmonia/frontend/src/app/application/chat/: chat.service.spec.ts  chat.service.ts
app-harmonia/frontend/src/app/application/tool/: tool.service.ts
app-harmonia/frontend/src/app/domain/auth/guards/: auth.guard.ts
app-harmonia/frontend/src/app/domain/auth/models/: user.model.ts
app-harmonia/frontend/src/app/domain/auth/repositories/: auth.repository.ts
app-harmonia/frontend/src/app/domain/chat/models/: chat.model.ts  history-chat.model.ts  message.model.ts
app-harmonia/frontend/src/app/domain/chat/repositories/: chat.repository.ts
app-harmonia/frontend/src/app/domain/tool/models/: tool.model.ts
app-harmonia/frontend/src/app/infrastructure/http/: auth.http.repository.ts  chat.http.repository.ts  tool.http.repository.ts
app-harmonia/frontend/src/app/infrastructure/storage/: session.storage.ts
app-harmonia/frontend/src/app/presentation/pages/auth/login/: login.css  login.html  login.spec.ts  login.ts
app-harmonia/frontend/src/app/presentation/pages/chat/: chat.html  chat.spec.ts  chat.ts
app-harmonia/frontend/src/app/presentation/pages/home/: home.css  home.html  home.spec.ts  home.ts
app-harmonia/frontend/src/app/presentation/shared/components/history-card/: history-card.css  history-card.html  history-card.ts
app-harmonia/frontend/src/app/presentation/shared/components/navbar/: navbar.html  navbar.spec.ts  navbar.ts
app-harmonia/frontend/src/app/presentation/shared/components/sidebar/: sidebar.html  sidebar.spec.ts  sidebar.ts
app-harmonia/frontend/src/app/presentation/shared/components/tool-card/: tool-card.css  tool-card.html  tool-card.spec.ts  tool-card.ts
app-harmonia/frontend/src/environments/: environment.development.ts  environment.ts
config/: .env  .env-harmonia-agente  .env-harmonia-app  config.py
database/scripts-agente/: 10-create.sql  20-insert.sql
database/scripts-backend/: 10-create.sql  20-insert-tools.sql  30-insert-user.sql
etl_pipeline/: check_db_vector.py  download_model.py  embedding.py  entrypoint.sh  quantize_labse.py  quantize_model.py  sql_data.jsonl  vector_data.py
