[tool.poetry]
name = "agente-proto"
version = "0.2.0"
description = "HarmonIA: RAG Otimizado via OpenVINO INT8 (Qwen 2.5 + LaBSE + Weaviate v4)"
authors = ["Patrick <patrick.ribeiro@ufpr.br>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# --- Core IA & OpenVINO ---
openvino = "2024.5.0"
optimum-intel = { extras = ["openvino"], version = "1.21.0" }
nncf = "2.14.0"
transformers = "^4.45.2"
torch = { version = "2.3.1", source = "pytorch-cpu" }
datasets = "^2.19.0"


# --- Banco de Dados ---
weaviate-client = "^4.6.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"

# --- Backend API ---
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.0"
python-multipart = "^0.0.12"

# --- Segurança  ---
bcrypt = "^4.2.0"
zxcvbn = "^4.4.28"

# --- Utilidades ---
numpy = "^1.26.4"
scipy = "^1.11.0"
scikit-learn = "^1.5.0"
huggingface-hub = { extras = ["cli"], version = "^0.23.2" }
tqdm = "^4.66.0"
psutil = "^6.0.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
